# supabase-realtime-client

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
docs/: index.md  quickstart.md
docs/reference/: channel.md  connection.md  exceptions.md
quickstart/: index.html
realtime/: __init__.py  channel.py  connection.py  exceptions.py  message.py  transformers.py
reference/channel/: index.html
reference/connection/: index.html
reference/exceptions/: index.html
reference/message/: index.html
search/: search_index.json
